# c_project

./: .c_helloword.swp  .c_hellword.swp  .file.hole.swp  M120.z01  M120.z02  M120.z03  M120.z04  M120.z05  M120.z06  README.md  fg_3_2  fg_3_2.c  hello_word.c  hellword  hellword.c  hellword.i  hellword.s  memstr  memstr.c
M120/dbloader/: .gitignore  CMakeLists.txt  README.md  dbloader.c  dbloader.h
M120/libs/dsc-lib/: CMakeLists.txt  DSC_acl.c  DSC_alarm.c  DSC_auth.c  DSC_bgp.c  DSC_circuitpack.c  DSC_common.c  DSC_connectivity.c  DSC_dns.c  DSC_edfa.c  DSC_lasersafety.c  DSC_lldp.c  DSC_module.c  DSC_net.c  DSC_ocm.c  DSC_ocs.c  DSC_oper.c  DSC_ops.c  DSC_parameter.c  DSC_platform.c  DSC_rstp.c  DSC_snmp.c  DSC_system.c  DSC_tca.c  DSC_tdcm.c  DSC_time.c  DSC_wavelength_router.c  DSC_waveplan.c  build.sh
M120/libs/dsc-lib/include/: DSC_aaa.h  DSC_connectivity.h  DSC_control_loop.h  DSC_coo.h  DSC_dns.h  DSC_edfa.h  DSC_inc.h  DSC_lldp.h  DSC_log.h  DSC_module.h  DSC_net.h  DSC_ocm.h  DSC_ocs.h  DSC_oper.h  DSC_pam4.h  DSC_platform.h  DSC_pm.h  DSC_rstp.h  DSC_system.h  DSC_tca.h  DSC_tdcm.h  DSC_telemetry.h  DSC_waveplan.h  org_openroadm_common_alarm_pm_types.h  org_openroadm_common_state_types.h  org_openroadm_common_types.h  org_openroadm_physical_types.h  org_openroadm_port_types.h
M120/libs/hal/api_lib/: CMakeLists.txt  api_c_main.c  api_main.cpp  build.sh
M120/libs/hal/dev/: CMakeLists.txt  RegisterFile  hal_main.cpp
M120/libs/util-lib/: CMakeLists.txt  README.md  build.sh  cJSON.h  fsm.c  ieee_float.c  ieee_float.h  test_queue.c  util_aes.c  util_aes.h  util_cali.c  util_cali.h  util_cmn.c  util_cmn.h  util_crc.c  util_event.c  util_file.h  util_inotify.c  util_log.h  util_log_hash.c  util_log_hash.h  util_msg.h  util_network.h  util_queue.h  util_semphore.c
M120/operationd/: CMakeLists.txt  README.md  operationd.c  operationd.h  operationd_alm.c  operationd_alm.h  operationd_config_mfg.c  operationd_config_mfg.h  operationd_file.c  operationd_file.h  operationd_led.c  operationd_led.h  operationd_queue.c  operationd_queue.h  operationd_reset.c  operationd_reset.h  operationd_upgd.c  operationd_upgd.h
M120/opsd/: CMakeLists.txt  README.md  ops_callback.c  ops_callback.h  ops_common.c  ops_common.h  ops_protocol.c  ops_protocol.h  ops_queue.c  ops_queue.h  opsd.c
M120/restapi/: CMakeLists.txt  README.md  build.sh  main.c  rest_api_alarm.c  rest_api_alarm.h  rest_api_auth.c  rest_api_auth.h  rest_api_autoctrl.c  rest_api_autoctrl.h  rest_api_edfa.c  rest_api_edfa.h  rest_api_generic.c  rest_api_generic.h  rest_api_msft.c  rest_api_msft.h  rest_api_ocm.c  rest_api_ocm.h  rest_api_ocs.c  rest_api_ocs.h  rest_api_pm.c  rest_api_pm.h  rest_api_upg.c  rest_api_upg.h  rest_auth.c  rest_auth.h  rest_common.c  rest_common.h  rest_edfa.c  rest_edfa.h  rest_handle.c  rest_handle.h  rest_log.c  rest_log.h  rest_main.c  rest_main.h  rest_msft.c  rest_msft.h  rest_ocm.c  rest_ocm.h  (+12 more)
M120/restapi/openapi/: README.txt
M120/restapi/openapi/basic_yang/: com-oplink-connectivity-validation.yang
M120/restapi/openapi/mapping/: README.md  list_key.json  list_key_map.sh  map_all.sh  module_map.sh  module_path.json  module_path_special.json
M120/restapi/openapi/msft/: Swagger_spec.yml  msft-com-oplink-otdr.yaml  msft-dci-api-1.0.yaml.txt  msft-dci-odtr.yaml  msft-openconfig-channel-monitor.yaml  msft-openconfig-channel-monitor_20210805.yaml  msft-openconfig-wavelength-router.yaml  msft_swagger_spec.yaml
M120/restapi/openapi/yaml/: com-oplink-auth.yaml  com-oplink-connectivity-validation.yaml  com-oplink-dfb.yaml  com-oplink-laser-safty.yaml  com-oplink-optical.yaml  com-oplink-rpc.yaml  com-oplink-service.yaml  ietf-system.yaml  openconfig-acl.yaml  openconfig-channel-monitor.yaml  openconfig-gnoi-otdr.yaml  openconfig-optical-amplifier.yaml  openconfig-optical-attenuator.yaml  openconfig-system.yaml  openconfig-transport-line-connectivity.yaml  openconfig-transport-line-protection.yaml  openconfig-wavelength-router.yaml  org-openroadm-alarm.yaml  org-openroadm-database.yaml  org-openroadm-de-operations.yaml  org-openroadm-device.yaml  org-openroadm-file-transfer.yaml  org-openroadm-pm.yaml  org-openroadm-swdl.yaml  org-openroadm-syslog.yaml  org-openroadm-tca.yaml  yaml_version.txt
M120/restapi/openapi/yang2yaml/: yang2yaml.sh
M120/restapi/tests/: Readme.txt  test.sh
M120/restapi/tests/auth/: login.json  user.json
M120/restapi/tests/data_400GZR/: Readme.txt
M120/restapi/tests/dfb/: dfb-config-02.json  dfb-config.json  dfb-top-02.json  dfb-top.json  dfbs.json
M120/restapi/tests/ipacl/: ipacl-2.json  ipacl-empty1.json  ipacl-empty2.json  ipacl.json
M120/restapi/tests/laser-safty/: laser-safty-config.json  laser-safty-top.json
M120/restapi/tests/oc-amplifier/: amplifier-ba-config.json  amplifier-osc-config.json  amplifier-pa-config.json  amplifiers-02.json  amplifiers.json  optical-amplifier-top-02.json  optical-amplifier-top.json  supervisory-channel-osc.json  supervisory-channels.json
M120/restapi/tests/oc-attenuator/: attenuator-osc-tx-voa-config.json  attenuator-pa-voa-config.json  attenuator-padding-voa-config.json  attenuators.json  optical-attenuator-top-02.json  optical-attenuator-top.json
M120/test/: .gitignore  CMakeLists.txt  README  README.md  build.sh
M120/test/function_test/: reademe.txt
M120/test/ieeefloat32_test/: CMakeLists.txt  b64.h  encode.c  ieeefloat32_test.c
M120/test/monitor/: .dockerignore  DockerGuide.md  Dockerfile  README.md  alpine.Dockerfile  monitor.py  ncConn.py  settings.py  xmlUtil.py
M120/test/nc_test/: nctest.py  readme.txt  settings.py  test_connection.py  test_edfa.py  test_port.py  test_system.py
M120/test/unit_test/: CMakeLists.txt  DSC_alarm_test.c  DSC_connection_test.c  DSC_control_loop_test.c  DSC_edfa_test.c  DSC_mux_test.c  DSC_ocm_test.c  DSC_ops_test.c  DSC_osc_test.c  DSC_pam4_test.c  DSC_pm_test.c  DSC_port_test.c  DSC_protocols_test.c  DSC_system_test.c  DSC_tca_test.c  DSC_tdcm_test.c  DSC_telemetry_test.c  DSC_waveplan_test.c  auto_test.sh  oplk_dsc_api_test.c  unit_test.sh
c_josn/: cJSON.c  test  (+8 more)
(+1242 files in other folders)
