cmake_minimum_required(VERSION 3.0)
set(SHASTA_BIGSUR_PROJECT_DIR  ../../..)
set(SYSREPO_SOURCE_DIR  ../../../apps_pub/sysrepo/)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11 -O3 -Wall -Werror")

include_directories("${SYSREPO_SOURCE_DIR}/inc")
include_directories("${SHASTA_BIGSUR_PROJECT_DIR}/libs/dsc-lib/include")
include_directories("${SHASTA_BIGSUR_PROJECT_DIR}/libs/util-lib")


add_executable(oplk_dsc_api_test oplk_dsc_api_test.c)
add_executable(DSC_system_test DSC_system_test.c)
add_executable(DSC_port_test DSC_port_test.c)
add_executable(DSC_edfa_test DSC_edfa_test.c)
add_executable(DSC_waveplan_test DSC_waveplan_test.c)
add_executable(DSC_ocm_test DSC_ocm_test.c)
add_executable(DSC_telemetry_test DSC_telemetry_test.c)
add_executable(DSC_alarm_test DSC_alarm_test.c)
add_executable(DSC_ops_test DSC_ops_test.c)
add_executable(DSC_pam4_test DSC_pam4_test.c)
add_executable(DSC_osc_test DSC_osc_test.c)
add_executable(DSC_connection_test DSC_connection_test.c)
add_executable(DSC_control_loop_test DSC_control_loop_test.c)
add_executable(DSC_pm_test DSC_pm_test.c)
add_executable(DSC_protocols_test DSC_protocols_test.c)
add_executable(DSC_tca_test DSC_tca_test.c)
add_executable(DSC_tdcm_test DSC_tdcm_test.c)
add_executable(DSC_mux_test DSC_mux_test.c)



LINK_DIRECTORIES("/usr/local/lib")
target_link_libraries(oplk_dsc_api_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_system_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_port_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_edfa_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_waveplan_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_ocm_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_telemetry_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_alarm_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_ops_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_pam4_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_osc_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_connection_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_control_loop_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_pm_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_protocols_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_tca_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_tdcm_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
target_link_libraries(DSC_mux_test oplkdsc oplkutil cmocka pthread crypt /usr/local/lib/libsysrepo.so.0.7 )
